fix(toast): toast content textAlign (#6345)

--- a/src/components/toast/toast.less
+++ b/src/components/toast/toast.less
@@ -26,6 +26,7 @@
     font-size: var(--adm-font-size-7);
     line-height: 1.5;
     box-sizing: border-box;
+    text-align: initial;
   }
   .@{class-prefix-toast}-main-text {
     padding: 12px;
